# bevy_mod_simplest_healthbar

./: Cargo.toml  Makefile  README.md  README_start.md
assets/models/: apple.glb  apple_tree.glb  base.glb  football.glb  map.glb  simple_turret.glb
examples/: health_bar.rs
src/: lib.rs
